--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MULTI TEST</title>
+    <script type="text/javascript" src="librairie/jquery.min.js"></script>
     <script type="text/javascript" src="librairie/semantic.min.js"></script>
     <link rel="stylesheet" href="librairie/semantic.min.css">
 </head>
 <body>
+    <div class="ui one column centered grid">
+        <div class="row">
+            <h2>Créer une nouvelle partie !</h2>
+        </div>
+        <div class="row">
+            <div class="ui action input">
+                <input type="text" id="createGame" placeholder="Créer une partie">
+                <button class="ui green button">Créer !</button>
+            </div>
+        </div>
+            <div class="row">
+                <h2>Liste de(s) partie(s):</h2>
+            </div>
+        <div id="contentList" class="row">
+        </div>
+    </div>
+        <script type="text/javascript" src="client.js"></script>
 </body>
 </html>
