finalisation des cartes de parties)

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="ui action input">
-                <input type="text" id="createGame" placeholder="Créer une partie">
+                <input type="text" id="createGame" placeholder="Nom de la partie...">
                 <button class="ui green button">Créer !</button>
             </div>
         </div>
