--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,12 @@
     <script type="text/javascript" src="librairie/jquery.min.js"></script>
     <script type="text/javascript" src="librairie/semantic.min.js"></script>
     <link rel="stylesheet" href="librairie/semantic.min.css">
+    <script type="text/javascript" src="librairie/phaser.min.js"></script>
+    <script type="text/javascript" src="functions.js"></script>
+    <script type="text/javascript" src="client.js"></script>
 </head>
 <body>
-    <div class="ui one column centered grid">
+    <!-- <div class="ui one column centered grid">
         <div class="row">
             <h2>Créer une nouvelle partie !</h2>
         </div>
@@ -24,7 +27,7 @@
             </div>
         <div id="contentList" class="row">
         </div>
-    </div>
-        <script type="text/javascript" src="client.js"></script>
+    </div> -->
+        
 </body>
 </html>
